Fixed vertical spacing

--- a/Racquet_Science/tennis_atp_proj/css/style.css
+++ b/Racquet_Science/tennis_atp_proj/css/style.css
@@ -20,7 +20,8 @@
 }
 
 .players {
-    top: 153px;
+    position:absolute;
+    top: 10%;
 }
 
 .button-container{
